<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="900dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="480dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/registerContainer"
            android:layout_width="310dp"
            android:layout_height="550dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="55dp"
            android:paddingStart="180dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="255dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="1dp"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:paddingLeft="10dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="255dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="1dp"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:paddingLeft="10dp"
                    android:hint="@string/mail"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="255dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="1dp"
                    android:autofillHints="phone"
                    android:textColor="@color/black"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_phone_24"
                    android:paddingLeft="10dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone" />


                <EditText
                    android:id="@+id/inputPasswordRegister"
                    android:layout_width="255dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="1dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_password"
                    android:paddingLeft="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/inputPasswordRepeat"
                    android:layout_width="255dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="1dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_password"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/inputBirthdate"
                    android:layout_width="255dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="1dp"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/birthdate"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                    android:paddingLeft="10dp"
                    android:inputType="date"/>

                <Button
                    android:id="@+id/register"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/border_button"
                    android:drawableEnd="@drawable/ic_baseline_arrow_circle_right_24"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="20dp"
                    android:paddingEnd="25dp"
                    android:text="@string/register"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints,RtlCompat" />

                <TextView
                    android:id="@+id/alreadyHasAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="#000000" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>