<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/loginContainer"
            android:layout_width="300dp"
            android:layout_height="320dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="200dp"
            app:cardCornerRadius="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/inputLogin"
                    android:layout_width="255dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="92dp"
                    android:layout_marginEnd="1dp"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />


                <EditText
                    android:id="@+id/inputPasswordRegister"
                    android:layout_width="255dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="1dp"
                    android:background="@drawable/border_button"
                    android:drawableLeft="@drawable/ic_baseline_password"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/submitlogin"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/border_button"
                    android:drawableEnd="@drawable/ic_baseline_arrow_circle_right_24"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/log_in"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints,RtlCompat" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:paddingStart="122dp"
                    android:paddingTop="15dp"
                    android:text="@string/register"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>